add posts routes to manager
