# backend/manager/src/routes/groupRouter.js
@@ -1,0 +1,12 @@
+import express from "express";
+import groupController from "../controllers/groupController";
+
+const router = express.Router();
+
+router.get("/", groupController.getAllGroups);
+router.get("/:id", groupController.getGroupById);
+router.post("/", groupController.createGroup);
+router.put("/:id", groupController.updateGroup);
+router.delete("/:id", groupController.deleteGroup);
+
+export default router;
